# rapid-img-convert

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
rapid_img_convert/: __init__.py  core.py
tests/: test_rapid_img_convert.py
